added kagome model

--- a/square/ising.varying.b.ipynb
+++ b/square/ising.varying.b.ipynb
@@ -200,7 +200,10 @@
     "j_vals = np.linspace(-1,1,10)\n",
     "b_vals = np.linspace(-1,1,b_num)\n",
     "avg_mags = np.zeros(len(b_vals)) # Initialize avg_mags as a 2D array\n",
+    "spec_head_cap_arr = np.zeros(len(b_vals))\n",
+    "succeptibility_arr = np.zeros(len(b_vals)\n",
     "avg_mags_err = np.zeros((len(j_vals), len(b_vals)))\n",
+    "\n",
     "i = 0\n",
     "for k, b in enumerate(b_vals):\n",
     "    if k ==0:\n",
