--- a/square/ising.varying.j copy.ipynb
+++ b/square/ising.varying.j copy.ipynb
@@ -32,6 +32,9 @@
     "num_therm = 100\n",
     "\n",
     "mag_per_spin_arr = np.zeros(num_therm)\n",
+    "specific_heat_arr = np.zeros(num_therm)\n",
+    "susceptibility_arr = np.zeros(num_therm)\n",
+    "\n",
     "visual_arr = []"
    ]
   },
@@ -89,24 +92,24 @@
    "outputs": [],
    "source": [
     "j_vals = np.linspace(-1,1,50)\n",
-    "b_vals = np.linspace(-1,1,50)\n",
+    "# b_vals = np.linspace(-1,1,50)\n",
     "avg_mags = np.zeros((len(j_vals), len(b_vals)))  # Initialize avg_mags as a 2D array\n",
     "avg_mags_err = np.zeros((len(j_vals), len(b_vals)))\n",
     "i = 0\n",
-    "# for i, j in enumerate(j_vals):\n",
-    "#     for k, b in enumerate(b_vals):\n",
-    "#         ising = Ising(L,j,b, beta)\n",
-    "#         for l in range(num_therm):\n",
-    "#             ising.do_thermalisation_sweep()\n",
-    "#             mag_per_spin_arr[l] = ising.get_mag_per_spin()\n",
-    "#         # mag_per_spin_arr = np.array([ising.do_thermalisation_sweep() or ising.get_mag_per_spin() for _ in range(num_therm)])\n",
-    "#         rav = calculate_running_average(mag_per_spin_arr, 5)\n",
-    "#         fp = flatten_point(rav, threshold)\n",
-    "#         # print(f'j: {j}, b: {b}, fp: {fp}')\n",
-    "#         avg_mags[i, k] = np.mean(mag_per_spin_arr[fp:])  # Store the average magnetisation in the 2D array\n",
-    "#         avg_mags_err[i, k] = np.std(mag_per_spin_arr[fp:])/np.sqrt(len(mag_per_spin_arr[fp:])) # Store the average magnetisation in the 2D array\n",
-    "#         i += 1\n",
-    "#         print(i)"
+    "for i, j in enumerate(j_vals):\n",
+    "    for k, b in enumerate(b_vals):\n",
+    "        ising = Ising(L,j,b, beta)\n",
+    "        for l in range(num_therm):\n",
+    "            ising.do_thermalisation_sweep()\n",
+    "            mag_per_spin_arr[l] = ising.get_mag_per_spin()\n",
+    "        # mag_per_spin_arr = np.array([ising.do_thermalisation_sweep() or ising.get_mag_per_spin() for _ in range(num_therm)])\n",
+    "        rav = calculate_running_average(mag_per_spin_arr, 5)\n",
+    "        fp = flatten_point(rav, threshold)\n",
+    "        # print(f'j: {j}, b: {b}, fp: {fp}')\n",
+    "        avg_mags[i, k] = np.mean(mag_per_spin_arr[fp:])  # Store the average magnetisation in the 2D array\n",
+    "        avg_mags_err[i, k] = np.std(mag_per_spin_arr[fp:])/np.sqrt(len(mag_per_spin_arr[fp:])) # Store the average magnetisation in the 2D array\n",
+    "        i += 1\n",
+    "        print(i)"
    ]
   },
   {
